--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "normalbench"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.43", features = ["cargo", "derive"] }
+csv = "1.3.1"
 ggez = "0.9.3"
 rand = "0.9.2"
+serde = { version = "1.0.219", features = ["derive"] }
